--- a/index.html
+++ b/index.html
@@ -11,40 +11,69 @@
 		<nav class="nav-mobile">
 			<button class="btn nav-mobile__btn">graphic design</button>
 			<button class="btn nav-mobile__btn">illustration</button>
-			<button class="btn nav-mobile__btn">about me</button>
+			<button class="btn nav-mobile__btn">about</button>
 			<div class="nav-mobile__border-line"></div>
 		</nav>
-		<!-- HEADER -->
-		<!-- <header class="header-mobile">
-			<button class="header-mobile__btn btn">MENU</button>
-			<div class="header-mobile__logo-container">
-				<img
-					id="logo"
-					class="header-mobile__logo"
-					src="./img/logo_marta.svg"
-					alt="logo"
-				/>
-			</div>
-		</header> -->
 
-		<!-- <div class="main-grid-wrapper"> -->
 		<header class="header">
 			<button id="menu-btn" class="btn header__menu-btn">MENU</button>
 			<img
 				id="logo"
 				class="header__logo"
-				src="./img/logo_marta.svg"
+				src="./public/img/logo_marta.svg"
 				alt="logo"
 			/>
 			<nav class="nav-desktop">
 				<button class="btn nav-desktop__btn">graphic design</button>
 				<button class="btn nav-desktop__btn">illustration</button>
-				<button class="btn nav-desktop__btn">about me</button>
+				<button class="btn nav-desktop__btn">about</button>
 			</nav>
 		</header>
-		<!-- </div> -->
+
 		<main>
 			<div class="responsive-wrapper">
+				<section class="section about-me">
+					<p class="about-me__p">
+						Hello, I’m Marta and I'm a graphic designer and illustrator from
+						Poland.
+					</p>
+					<p class="about-me__p about-me__p--chart chart">
+						<span class="chart__span-all"
+							>My experience covers / ranges from:</span
+						>
+						<span class="chart__span-left">editorial design</span>
+						<span class="chart__span-right">through</span>
+						<span class="chart__span-left">typography</span>
+						<span class="chart__span-right">''</span>
+						<span class="chart__span-left">educational illustration</span>
+						<span class="chart__span-right">''</span>
+						<span class="chart__span-left">illustration for children</span>
+						<span class="chart__span-right">''</span>
+						<span class="chart__span-left">press illustration</span>
+						<span class="chart__span-right">''</span>
+						<span class="chart__span-left">infographics</span>
+						<span class="chart__span-right">to</span>
+						<span class="chart__span-left">branding.</span>
+					</p>
+					<p class="about-me__p">
+						Sometimes I’m also in charge of children books’ and schoolbooks'
+						layouts, <br />
+						and that's the field of interest I'm pursuing and within which I’m
+						trying to work as often as it's possible.
+					</p>
+					<p class="about-me__p">
+						I also had the pleasure to conduct workshops with both kids and
+						adults on books and lettering.
+					</p>
+					<figure>
+						<img src="obrazek.jpg" alt="" />
+						<figcaption>fot. Maciej Wróbel</figcaption>
+					</figure>
+					<p class="about-me__p">
+						contact me: <br />
+						marta.sieczkowska@vp.pl
+					</p>
+				</section>
 				<div class="all-thumbnails">
 					<div class="single-thumbnail single-thumbnail--thumbnail-1">
 						<div class="single-thumbnail__img-description">
@@ -61,7 +90,7 @@
 					</div>
 					<div class="single-thumbnail single-thumbnail--thumbnail-3">
 						<div class="single-thumbnail__img-description">
-							<p class="single-thumbnail__p">Ganna Glass <br>logo design</p>
+							<p class="single-thumbnail__p">Ganna Glass <br />logo design</p>
 						</div>
 					</div>
 					<div class="single-thumbnail single-thumbnail--thumbnail-4">
@@ -71,22 +100,27 @@
 					</div>
 					<div class="single-thumbnail single-thumbnail--thumbnail-5">
 						<div class="single-thumbnail__img-description">
-							<p class="single-thumbnail__p">Tailor shop <br> brand <br>collateral</p>
+							<p class="single-thumbnail__p">
+								Tailor shop <br />
+								brand <br />collateral
+							</p>
 						</div>
 					</div>
 					<div class="single-thumbnail single-thumbnail--thumbnail-6">
 						<div class="single-thumbnail__img-description">
-							<p class="single-thumbnail__p">EABS <br>logo design</p>
+							<p class="single-thumbnail__p">EABS <br />logo design</p>
 						</div>
 					</div>
 					<div class="single-thumbnail single-thumbnail--thumbnail-7">
 						<div class="single-thumbnail__img-description">
-							<p class="single-thumbnail__p">Lasek grocery <br>brand <br>collateral</p>
+							<p class="single-thumbnail__p">
+								Lasek grocery <br />brand <br />collateral
+							</p>
 						</div>
 					</div>
 					<div class="single-thumbnail single-thumbnail--thumbnail-8">
 						<div class="single-thumbnail__img-description">
-							<p class="single-thumbnail__p">Circus left <br>the town</p>
+							<p class="single-thumbnail__p">Circus left <br />the town</p>
 						</div>
 					</div>
 				</div>
